# mcpunction

./: LICENSE  README.md  pyproject.toml
mcpunction/: __init__.py  mcpunction.py
mcpunction.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test_dtpk/: pack.mcmeta
test_dtpk/data/main/function/: game_loop.mcfunction  lib_func.mcfunction  main.mcfunction  pkg_func.mcfunction  pkg_main.mcfunction  say_and_kill.mcfunction  shoot_gun.mcfunction
test_dtpk/data/minecraft/tags/function/: load.json  tick.json
tests/: test_mcpunction.py
